--- a/gradle_backup/build.gradle
+++ b/gradle_backup/build.gradle
@@ -15,7 +15,6 @@ repositories {
 def ktor_version = '1.2.4'
 def kotlinx_html_version = "0.6.11"
 def logback_version = '1.2.3'
-def klockVersion = '1.7.3'
 
 kotlin {
     jvm()
@@ -27,7 +26,6 @@ js {
         commonMain {
             dependencies {
                 implementation kotlin('stdlib-common')
-                implementation "com.soywiz.korlibs.klock:klock:$klockVersion"
             }
         }
         commonTest {
@@ -64,7 +62,6 @@ js {
                 implementation kotlin('stdlib-js')
                 implementation "org.jetbrains.kotlinx:kotlinx-html-js:${kotlinx_html_version}"
                 implementation "io.ktor:ktor-client-js:$ktor_version"
-                implementation "io.ktor:ktor-client-json-js:$ktor_version"
                 implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core-js:1.3.2"
                 implementation "com.github.salomonbrys.kodein:kodein-js:4.1.0"
             }
@@ -102,7 +99,7 @@ jvmJar {
     from(new File(jsBrowserWebpack.entry.name, jsBrowserWebpack.outputPath))
 }
 
-task run(type: JavaExec, dependsOn: [ copyJsDependenciesToJcm,copyJsToJvm, copyJsResourcesToJvmResources, jvmJar]) {
+task run(type: JavaExec, dependsOn: [jvmJar, copyJsDependenciesToJcm,copyJsToJvm, copyJsResourcesToJvmResources]) {
     group = "application"
     main = "com.manageme.managemeserver.ApplicationKt"
     classpath(configurations.jvmRuntimeClasspath, jvmJar)
